Move credentials to environment variables

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,34 @@
 # Learn more https://docs.github.com/en/get-started/getting-started-with-git/ignoring-files
 
-# dependencies
+# Environment variables
+.env
+.env.local
+.env.*.local
+
+# Node modules
 node_modules/
+
+# Logs
+logs
+*.log
+npm-debug.log*
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# Build outputs
+dist/
+build/
 
 # Expo
 .expo/
-dist/
 web-build/
 expo-env.d.ts
 
@@ -27,7 +50,6 @@ yarn-debug.*
 yarn-error.*
 
 # macOS
-.DS_Store
 *.pem
 
 # local env files
