--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "lint": "expo lint"
   },
@@ -25,6 +25,7 @@
     "expo-image": "~3.0.9",
     "expo-linking": "~8.0.8",
     "expo-location": "~19.0.7",
+    "expo-maps": "~0.12.8",
     "expo-router": "~6.0.11",
     "expo-sharing": "~14.0.7",
     "expo-splash-screen": "~31.0.10",
@@ -32,16 +33,19 @@
     "expo-symbols": "~1.0.7",
     "expo-system-ui": "~6.0.7",
     "expo-web-browser": "~15.0.8",
+    "fast-xml-parser": "^5.3.0",
     "firebase": "^12.5.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.4",
     "react-native-gesture-handler": "~2.28.0",
+    "react-native-maps": "1.20.1",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-web": "~0.21.0",
-    "react-native-worklets": "0.5.1"
+    "react-native-worklets": "0.5.1",
+    "xml2js": "^0.6.2"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
