--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-web": "~0.21.0",
-    "react-native-worklets": "0.5.1",
+    "react-native-worklets": "^0.5.1",
     "xml2js": "^0.6.2"
   },
   "devDependencies": {
