--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
-    "lint": "expo lint"
+    "lint": "expo lint",
+    "trains": "tsx utils/returnRunningDarts.ts",
+    "trains:cloud": "tsx utils/returnRunningDarts.ts --cloud"
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.2",
