--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "expo-web-browser": "~15.0.8",
     "fast-xml-parser": "^5.3.0",
     "firebase": "^12.5.0",
+    "geolib": "^3.3.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.4",
