--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "@react-navigation/native": "^7.1.8",
     "dotenv": "^17.2.3",
     "expo": "~54.0.13",
+    "expo-blur": "^15.0.7",
     "expo-constants": "~18.0.9",
     "expo-dev-client": "~6.0.15",
     "expo-file-system": "~19.0.17",
     "expo-font": "~14.0.9",
+    "expo-glass-effect": "^0.1.6",
     "expo-haptics": "~15.0.7",
     "expo-image": "~3.0.9",
     "expo-linking": "~8.0.8",
